REGRESSION: Not sending NPP_SetWindow is causing Flash to not throttle itself <rdar://problem/12133021> and https://bugs.webkit.org/show_bug.cgi?id=95274

Reviewed by Sam Weinig.

Source/WebKit2:

* UIProcess/API/mac/WKView.mm:
(-[WKView viewDidMoveToWindow]): Previously we'd only update window visibility when the window is hidden.
  Now we also update window visibility when the window is shown.

* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::callSetWindowInvisible): Call set window with a manufactured empty clip rect to tell
  the plug-in that it is complete hidden.
(WebKit):
* WebProcess/Plugins/Netscape/NetscapePlugin.h:
(NetscapePlugin):
* WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:
(WebKit::NetscapePlugin::windowVisibilityChanged): Call "callSetWindow" or "callSetWindowInvisible" as appropriate.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::setWindowIsVisible): Tell the plugin that its visibility changed.
(WebKit::PluginView::viewGeometryDidChange): Grab a clip rect that - although incorrect - at least is correct if
  the PluginView is completely hidden.

Tools:

Add a test plug-in that calls back into the page with info on the NPWindow passed
in to NPP_SetWindow.

* DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
* DumpRenderTree/TestNetscapePlugIn/Tests/LogNPPSetWindow.cpp: Added.
(LogNPPSetWindow):
(LogNPPSetWindow::LogNPPSetWindow):
(LogNPPSetWindow::NPP_SetWindow):

LayoutTests:

* platform/mac-wk2/plugins/npp-setwindow-called-on-scroll-expected.txt: Added.
* platform/mac-wk2/plugins/npp-setwindow-called-on-scroll.html: Added.

Canonical link: https://commits.webkit.org/113220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127047 268f45cc-cd09-0410-ab3c-d52691b4dbfc